# PromptEva

./: .gitignore  app.py  evaluator.py  pyproject.toml  run.sh  styles.py
config/: pricing.py
services/: suggestion_engine.py
